--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,7 +29,7 @@ test_script:
   # we don't run the "test phase" when doing deploys
   - if [%APPVEYOR_REPO_TAG%]==[false] (
       cargo test --target %TARGET% &&
-      cargo build --target %TARGET% &&
+      cargo build --target %TARGET%
     )
 
 before_deploy:
