Include required meta information

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "mdbook-toc"
 version = "0.1.0"
 authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
+description = "mdbook preprocessor to add Table of Contents"
+license = "MPL"
+homepage = "https://github.com/badboy/mdbook-toc"
+repository = "https://github.com/badboy/mdbook-toc"
 
 [dependencies]
 mdbook = "0.3.0"
