--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ description = "mdbook preprocessor to add Table of Contents"
 license = "MPL-2.0"
 homepage = "https://github.com/badboy/mdbook-toc"
 repository = "https://github.com/badboy/mdbook-toc"
+edition = "2018"
 
 [dependencies]
 mdbook = "0.3"
@@ -15,3 +16,6 @@ env_logger = "0.7.1"
 log = "0.4"
 clap = "2.33"
 serde_json = "1.0"
+
+[dev-dependencies]
+pretty_assertions = "0.6.1"
