--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ env_logger = "0.7.1"
 log = "0.4.11"
 clap = "2.33.3"
 serde_json = "1.0.57"
+toml = "0.5.6"
 
 [dev-dependencies]
 pretty_assertions = "0.6.1"
