--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,10 @@ rust-version = "1.58"
 mdbook = "0.4.21"
 pulldown-cmark = "0.9.1"
 log = "0.4.11"
-clap = "3.1.18"
+clap = { version = "4.0.29", features = ["cargo"] }
 serde_json = "1.0.57"
-toml = "0.5.6"
+toml = "0.5.10"
 
 [dev-dependencies]
 pretty_assertions = "1.0.0"
-env_logger = "0.9.0"
+env_logger = "0.10.0"
