Update CI tooling

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,20 +8,11 @@ env:
 jobs:
   build_and_test:
     name: Build and test
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        rust: [stable]
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
-
-    - name: Install ${{ matrix.rust }}
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: ${{ matrix.rust }}
-        override: true
+    - uses: dtolnay/rust-toolchain@stable
 
     - name: tests
       uses: actions-rs/cargo@v1
@@ -34,11 +25,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - uses: actions-rs/toolchain@v1
+    - uses: dtolnay/rust-toolchain@stable
       with:
-        toolchain: stable
-        components: rustfmt, clippy
-        override: true
+        components: rustmft
 
     - name: fmt
       run: cargo fmt --all -- --check
