--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,7 +27,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: dtolnay/rust-toolchain@stable
       with:
-        components: rustmft
+        components: rustfmt
 
     - name: fmt
       run: cargo fmt --all -- --check
