--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ rust-version = "1.58"
 mdbook = "0.4.32"
 pulldown-cmark = "0.9.1"
 log = "0.4.11"
-clap = { version = "4.0.29", features = ["cargo"] }
+clap = { version = "4.3.19", features = ["cargo", "derive"] }
 serde_json = "1.0.57"
 toml = "0.7.6"
 
