--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ rust-version = "1.66"
 mdbook = "0.4.32"
 pulldown-cmark = "0.9.3"
 log = "0.4.19"
-clap = { version = "4.3.19", features = ["cargo"] }
+clap = { version = "4.3.19", features = ["cargo", "derive"] }
 serde_json = "1.0.104"
 toml = "0.7.6"
 
