Reduce amount of dependencies
Disable the default features of `mdbook` and `pulldown-cmark` as these
are not needed. In both cases the default features are for the binary
crate to provide the CLI program, but we are only interested in the
library part of it.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ edition = "2018"
 rust-version = "1.66"
 
 [dependencies]
-mdbook = "0.4.35"
-pulldown-cmark = "0.9.3"
+mdbook = { version = "0.4.35", default-features = false }
+pulldown-cmark = { version = "0.9.3", default-features = false }
 log = "0.4.19"
 clap = { version = "4.3.19", features = ["cargo", "derive"] }
 serde_json = "1.0.104"
