--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,16 +6,15 @@ description = "mdbook preprocessor to add Table of Contents"
 license = "MPL-2.0"
 homepage = "https://github.com/badboy/mdbook-toc"
 repository = "https://github.com/badboy/mdbook-toc"
-edition = "2018"
-rust-version = "1.66"
+edition = "2024"
+rust-version = "1.88"
 
 [dependencies]
-mdbook = { version = "0.4.35", default-features = false }
+mdbook-preprocessor = "0.5.0"
 pulldown-cmark = { version = "0.10.0", default-features = false }
 log = "0.4.19"
 clap = { version = "4.3.19", features = ["cargo", "derive"] }
 serde_json = "1.0.104"
-toml = "0.5.11"
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
